--- a/rwfx/style/invite.css
+++ b/rwfx/style/invite.css
@@ -1055,8 +1055,8 @@ section{display: block;}
 }
 
 #sec8_avatar {
-	background: url('../img/sec8_avatar.jpg') center center no-repeat;
-	top: 23%;
+	background: url('../img/face.gif') center center no-repeat;
+	top: 35%;
 }
 
 #bottom {
